@@ -44,14 +44,15 @@ void
 ecc_point_mul (struct ecc_point *r, const struct ecc_scalar *n,
 	       const struct ecc_point *p)
 {
-  mp_limb_t size = p->ecc->size;
-  mp_size_t itch = 3*size + ECC_MUL_A_ITCH (size);
+  const struct ecc_curve *ecc = r->ecc;
+  mp_limb_t size = ecc->size;
+  mp_size_t itch = 3*size + ecc->mul_itch;
   mp_limb_t *scratch = gmp_alloc_limbs (itch);
 
-  assert (n->ecc == p->ecc);
-  assert (r->ecc == p->ecc);
+  assert (n->ecc == ecc);
+  assert (p->ecc == ecc);
 
-  ecc_mul_a (p->ecc, scratch, n->p, p->p, scratch + 3*size);
-  ecc_j_to_a (r->ecc, 1, r->p, scratch, scratch + 3*size);
+  ecc->mul (ecc, scratch, n->p, p->p, scratch + 3*size);
+  ecc->h_to_a (ecc, 1, r->p, scratch, scratch + 3*size);
   gmp_free_limbs (scratch, itch);
 }
