@@ -38,7 +38,9 @@ set_point (struct ecc_point *p,
   mpz_t X, Y;
   mpz_init_set_str (X, x, 0);
   mpz_init_set_str (Y, y, 0);
-  ecc_point_set (p, X, Y);
+  if (!ecc_point_set (p, X, Y))
+    die ("Test point not on curve!\n");
+
   mpz_clear (X);
   mpz_clear (Y);
 }
@@ -185,7 +187,7 @@ test_main(void)
 	   "4488572162727491199625798812850846214916160870437505769058530973184916706326908828109446998319674522651965593412129100088877891410841200092694907512496020182",
 	   "2126311732129869456512627735193938710331935978955001830871465201548004444073866677974896970734635601049909886616595755762740651165670628002084824920216966370",
 	   "4803556648772727869384704240411011976585308117802975396033423138930126997561438092192867119930177133880625991019440171972612468402200399449807843995563872782");
-#if 0
+
   /* NOTE: This isn't quite the standard way to do curve25519
      diffie-hellman, but it tests that the ecc_point interface works
      also with curve25519. FIXME: Which it doesn't yet do. */
@@ -198,5 +200,4 @@ test_main(void)
 	   "45040108202870901856797106334440548809561721639881101469282515918034252408802",
 	   "12684624775789228333626692483521764247362476074160626230698999100180553618972",
 	   "22635121008463339848034566659860493350277619617839914078958064757823336329514");
-#endif
 }
